--- a/css/app.css
+++ b/css/app.css
@@ -227,7 +227,7 @@ img {
 .site-footer {
 	border-top: 1px solid #e1e1e1;
 	margin-top: 5rem;
-	padding-top: 5rem;
+	padding: 3rem;
 
 	h3 {
 		margin-bottom: 1rem;
