--- a/css/app.css
+++ b/css/app.css
@@ -249,3 +249,18 @@ img {
 		}
 	}
 }
+
+/* Nosotros */
+
+.contenido-nosotros {
+	display: grid;
+	grid-template-columns: 1fr 2fr;
+	grid-template-columns: repeat(auto-fit, minmax(43rem, 1fr));
+	gap: 4rem;
+
+	.informacion-nosotros {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+}
