--- a/css/app.css
+++ b/css/app.css
@@ -53,6 +53,7 @@ img {
 	font-weight: 900;
 	padding: 1rem;
 	transition: background-color 0.3s ease-out;
+	text-align: center;
 
 	&:hover {
 		background-color: #769c02;
@@ -61,6 +62,10 @@ img {
 
 .text-center {
 	text-align: center;
+}
+
+.max-width-30 {
+	max-width: 30rem;
 }
 
 /* Header y navegacion */
@@ -113,6 +118,7 @@ img {
 			background-color: #037bc0;
 			color: #fff;
 			border-bottom-right-radius: 1rem;
+			border-bottom-left-radius: 1rem;
 		}
 	}
 }
@@ -262,5 +268,36 @@ img {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+	}
+}
+
+/* Blog */
+
+.contenedor-blog {
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	gap: 4rem;
+
+	.entrada {
+		border-bottom: 2px solid #e1e1e1;
+		margin-bottom: 2rem;
+		padding-bottom: 4rem;
+
+		&:last-of-type {
+			border: none;
+		}
+
+		.entrada-meta {
+			display: flex;
+			justify-content: space-between;
+
+			p {
+				font-weight: bold;
+			}
+
+			span {
+				color: #037bc0;
+			}
+		}
 	}
 }
