--- a/css/app.css
+++ b/css/app.css
@@ -277,27 +277,34 @@ img {
 	display: grid;
 	grid-template-columns: 2fr 1fr;
 	gap: 4rem;
+}
 
-	.entrada {
-		border-bottom: 2px solid #e1e1e1;
-		margin-bottom: 2rem;
-		padding-bottom: 4rem;
+.entrada {
+	border-bottom: 2px solid #e1e1e1;
+	margin-bottom: 2rem;
+	padding-bottom: 4rem;
 
-		&:last-of-type {
-			border: none;
+	&:last-of-type {
+		border: none;
+	}
+
+	.entrada-meta {
+		display: flex;
+		justify-content: space-between;
+
+		p {
+			font-weight: bold;
 		}
 
-		.entrada-meta {
-			display: flex;
-			justify-content: space-between;
-
-			p {
-				font-weight: bold;
-			}
-
-			span {
-				color: #037bc0;
-			}
+		span {
+			color: #037bc0;
 		}
 	}
+}
+
+/* Entrada */
+
+.contenido-entrada-blog {
+	width: 60rem;
+	margin: 0 auto;
 }
